Increase the width of the scrollbars. Fixes #6978

--- a/web/pgadmin/static/scss/_pgadmin.style.scss
+++ b/web/pgadmin/static/scss/_pgadmin.style.scss
@@ -1099,22 +1099,23 @@ textarea {
 /* Webkit customizations */
 
 ::-webkit-scrollbar, ::-webkit-scrollbar-corner {
-    width: $scrollbar-width;
-    height: $scrollbar-width;
+    width: $scrollbar-width !important;
+    height: $scrollbar-width !important;
     background-color: rgba($scrollbar-base-color, 0.2);
 }
 
 ::-webkit-scrollbar-thumb {
     border: 0.25rem solid transparent;
     border-radius: $border-radius*2;
-    background-clip: content-box;
     background-color: rgba($scrollbar-base-color, 0.7);
     background: rgba($scrollbar-base-color, 0.7) !important;
+    background-clip: content-box !important;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: $scrollbar-base-color;
-    background: $scrollbar-base-color !important;
+    border: 0.25rem solid transparent;
+    background-color: $scrollbar-base-color !important;
+    ackground-clip: content-box !important;
 }
 
 
